enum CategoriesMode { all, official }

const CategoriesMode kCategoriesMode = CategoriesMode.official;
// ou
// const CategoriesMode kCategoriesMode = CategoriesMode.all;

const Set<String> kOfficialCategories = {
  'Acompanhamentos',
  'Árabe',
  'Aperitivos',
  'Arroz e Risotos',
  'Aves',
  'Bebidas',
  'Bolos e Tortas',
  'Brasileira',
  'Carnes',
  'Churrasco',
  'Fitness',
  'Frutos do Mar',
  'Italiana',
  'Japonesa',
  'Chinesa',
  'Lanches',
  'Massas',
  'Mexicana',
  'Molhos',
  'Pães',
  'Peixes',
  'Rápida e Fácil',
  'Saladas',
  'Sopas',
  'Sobremesas',
  'Vegana',
  'Vegetariana',
};
