...
      }
    });

    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        _buildSectionTitle('Avaliações'),
        reviewsState.averageRating.when(
          data: (avgRating) => avgRating != null
              ? Row(
            children: [
              _RatingStars(rating: avgRating, size: 24, color: Colors.amber),
              const SizedBox(width: 8),
...
        const SizedBox(height: 16),
        if (currentUserId.isNotEmpty)
          _buildReviewInputSection(currentUserId, reviewsState.currentUserReview)
        else
          Padding(
            padding: const EdgeInsets.symmetric(vertical: 16.0),
            child: Text('Você precisa estar logado para avaliar.',
                style: TextStyle(fontStyle: FontStyle.italic, color: theme.colorScheme.onSurfaceVariant)),
          ),
        const SizedBox(height: 16),
        Text("Todas as Avaliações:", style: theme.textTheme.titleMedium),
        const SizedBox(height: 8),
        reviewsState.reviews.when(
...
              }),
            ),
            const SizedBox(height: 12),
            TextField(
              controller: _reviewTextController,
              decoration: InputDecoration(
                hintText: 'Escreva sua avaliação (opcional)...',
                border: OutlineInputBorder(borderRadius: BorderRadius.circular(8.0)),
                contentPadding: const EdgeInsets.symmetric(horizontal: 12.0, vertical: 10.0),
              ),
              maxLines: 3,
              textInputAction: TextInputAction.done,
            ),
...
                  onPressed: (_currentRatingInput == 0)
                      ? null
                      : () {
                    _submitReview(currentUserId);
                  },
                  style: ElevatedButton.styleFrom(backgroundColor: theme.colorScheme.primary),
                  child: Text(isEditing ? 'Atualizar' : 'Enviar',
                      style: TextStyle(color: theme.colorScheme.onPrimary)),
                ),
              ],
            ),
          ],
        ),
...
